Wed Jun  2 10:31:27 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/tests/Config_Handlers/handler_test.mpb:
	* DnC/Config_Handlers/Config_Handlers.mpc:
	  Updated these two file to make it compile with working on the
	  system like Debian or RedHat which have the pre-build binary
	  installed instead of xerces source.

Wed Jun  2 00:48:30 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/CAD_Handler.cpp:
        * DnC/Config_Handlers/CompImplDesc_Handler.cpp:
        * DnC/Config_Handlers/CompPkgDesc_Handler.cpp:
        * DnC/Config_Handlers/DnC_Dump.cpp:
        * DnC/Config_Handlers/Process_Element.i:
        * DnC/Config_Handlers/Process_Element.tpp:

          Made changes to fix testing errors.

Tue Jun  1 18:13:23 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/Core/NodeApplication_Impl.cpp:
	* DnC/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
          Updated these two files to fix the bug related to nil ();

Tue Jun  1 18:09:19 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

        * DnC/NodeManager/NodeDaemon.mpc

          Modify this to fix linking errors for missing library.

Tue Jun  1 17:52:29 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

        * DnC/NodeApplicationManager/NodeApplicationManager.mpc

          Modify this to fix linking errors.


Tue Jun  1 17:39:57 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/CompPortDesc_Handler.cpp:
        * DnC/Config_Handlers/CompPortDesc_Handler.h:
        * DnC/Config_Handlers/CompPropDesc_Handler.cpp:
        * DnC/Config_Handlers/CompPropDesc_Handler.h:

          Removed the above handlers as they are not used at all.

        * DnC/Config_Handlers/Config_Handlers.mpc:

          Updated the MPC file accordingly.

Tue Jun  1 15:30:49 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Basic_Handler.h:
        * DnC/Config_Handlers/CAD_Handler.cpp:
        * DnC/Config_Handlers/Cap_Handler.cpp: