@@ -47,7 +47,7 @@ int register_with_ns_ = 0;
 int
 parse_args (int argc, char *argv[])
 {
-  ACE_Get_Opt get_opts (argc, argv, "o:c:m:n");
+  ACE_Get_Opt get_opts (argc, argv, "o:c:m:i:n");
   int c;
 
   while ((c = get_opts ()) != -1)
